--- a/server/client/package.json
+++ b/server/client/package.json
@@ -8,6 +8,8 @@
     }
   },
   "dependencies": {
+    "ajv": "^6.4.0",
+    "materialize-css": "^0.100.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
